--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-amplify": "^3.0.22",
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^2.9.3",
     "cross-fetch": "^3.0.5",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-animation-components": "^3.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
